# indexing

./: .gitignore  ai_utils.py  assistant_loop.py  assistant_prompt.py  assistant_tools.py  chunking.py  cli_handlers.py  config.py  database.py  embeddings.py  index_batches.py  index_db.py  index_paths.py  index_state.py  index_store.py  index_vectors.py  indexer.py  indexing.py  main.py  openai.md  pyproject.toml  schemas.py  searching.py
